manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starlight-sidebar-topics-dropdown
