manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-sidebar-topics-dropdown
  namespace: starlight-sidebar-topics-dropdown
  labels:
    app: starlight-sidebar-topics-dropdown
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-sidebar-topics-dropdown
  template:
    metadata:
      labels:
        app: starlight-sidebar-topics-dropdown
    spec:
      containers:
        - name: starlight-sidebar-topics-dropdown
          image: "trueberryless/starlight-sidebar-topics-dropdown:0.3.3"
          imagePullPolicy: Always
