manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-sidebar-topics-dropdown
  namespace: starlight-sidebar-topics-dropdown
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-sidebar-topics-dropdown
  ports:
    - name: http
      port: 80
